[package]
name = "sui-widget-book"
version.workspace = true
description = "Widget gallery and screenshot-driven visual test stories for SUI."
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
sui = { workspace = true }
sui-debug = { workspace = true }
sui-testing = { workspace = true }

[dev-dependencies]
png = "0.17"
sui-render-wgpu = { workspace = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }
winit = { workspace = true }