[package]
name = "sui-widget-book"
version.workspace = true
description = "Widget gallery and screenshot-driven visual test stories for SUI."
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["native", "artifacts"]
native = ["sui/desktop", "sui/wgpu"]
web = ["sui/web", "sui/wgpu"]
artifacts = ["dep:sui-testing"]

[[bin]]
name = "sui-widget-book"
path = "src/main.rs"
required-features = ["artifacts"]

[dependencies]
sui = { path = "../sui", default-features = false }
sui-debug = { workspace = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }
sui-testing = { workspace = true, optional = true }

[dev-dependencies]
png = "0.17"
sui-render-wgpu = { workspace = true }
winit = { workspace = true }