[package]
name = "sui-widgets"
version.workspace = true
description = "Built-in widget library for SUI."
edition.workspace = true
rust-version.workspace = true

[dependencies]
palette = { workspace = true }
sui-core = { workspace = true }
sui-layout = { workspace = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }
sui-text = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
sui-render-wgpu = { workspace = true }
