[package]
name = "sinomo-ui-widgets"
version.workspace = true
description = "Built-in widget library for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_widgets"

[dependencies]
palette = { workspace = true }
pulldown-cmark = { workspace = true }
sui-animation = { workspace = true }
sui-core = { workspace = true }
sui-layout = { workspace = true }
sui-lucide = { workspace = true }
sui-reactive = { workspace = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }
sui-text = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
sui-render-wgpu = { workspace = true }
