[package]
name = "sui"
version.workspace = true
description = "Public Rust facade for the SUI workspace."
authors = ["Infinity_X <Infinity_X@sinomo.net>"]
edition.workspace = true
rust-version.workspace = true
include = ["**/*.rs", "Cargo.toml"]

[features]
default = ["desktop", "wgpu"]
desktop = ["wgpu", "dep:sui-platform"]
mobile = []
testing = []
web = []
wgpu = ["dep:sui-render-wgpu"]

[dependencies]
sui-core = { workspace = true }
sui-layout = { workspace = true }
sui-platform = { workspace = true, optional = true }
sui-render-wgpu = { workspace = true, optional = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }
sui-widgets = { workspace = true }
