[package]
name = "sinomo-ui"
version.workspace = true
description = "Public Rust facade for the SUI workspace."
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
include = ["**/*.rs", "Cargo.toml"]

[lib]
name = "sui"

[features]
default = ["desktop", "wgpu"]
desktop = ["wgpu", "dep:sui-platform"]
mobile = ["wgpu", "dep:sui-platform"]
testing = []
web = ["wgpu", "dep:sui-platform"]
wgpu = ["dep:sui-render-wgpu"]

[dependencies]
sui-core = { workspace = true }
sui-layout = { workspace = true }
sui-platform = { workspace = true, optional = true }
sui-render-wgpu = { workspace = true, optional = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }
sui-text = { workspace = true }
sui-widgets = { workspace = true }
