[package]
name = "xtask"
version = "0.1.0"
description = "Development and release automation for the SUI workspace."
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
